added lost import

--- a/examples/flask_ngrok3_example.ipynb
+++ b/examples/flask_ngrok3_example.ipynb
@@ -41,7 +41,7 @@
       "source": [
         "# flask_ngrok3_example.py\n",
         "from flask import Flask\n",
-        "from flask_ngrok3 import run_with_ngrok\n",
+        "from flask_ngrok3 import run_with_ngrok, get_host\n",
         "\n",
         "app = Flask(__name__)\n",
         "run_with_ngrok(app)  # Start ngrok when app is run\n",
